--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
     ports:
       - "5432:5432"
 
@@ -30,10 +30,9 @@ services:
       - db
       - redis
     environment:
-      DATABASE_HOST: db
-      DATABASE_USERNAME: postgres
-      DATABASE_PASSWORD: password
-      REDIS_URL: redis://redis:6379/1
+      - DATABASE_URL=postgres://postgres:password@db:5432/messaging_app_development
+      - REDIS_URL=redis://redis:6379/1
+      - RAILS_ENV=development
 
 volumes:
   postgres-data:
