--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update -qq && \
     apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
-    libyaml-dev
+    libyaml-dev \
+    nano
 
 WORKDIR /rails
 
